Nav bar completed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
     <title>Assignment-02</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="nav-bar shared-display">
+            <h3 class="fitness">Fitness</h3>
+            <div class="nav-content">
+                <ul>
+                    <li class="nav-item"><button>Home</button>
+                    <li class="nav-item">Service</li>
+                    <li class="nav-item">Contact</li>
+                    <li class="nav-item">About</li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
