Nav bar Responsive completed

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="./style/root.css">
     <link rel="stylesheet" href="./style/responsive.css">
     <link rel="stylesheet" href="./style/default.css">
+    <script src="https://kit.fontawesome.com/dcb5579193.js" crossorigin="anonymous"></script>
     <title>Assignment-02</title>
 </head>
 <body>
     <header>
-        <nav class="nav-bar shared-display">
+        <nav class="nav-bar">
             <h3 class="fitness">Fitness</h3>
             <div class="nav-content">
-                <ul>
+                <ul class="shared-display">
+                    <i class="fa-solid fa-bars"></i>
                     <li class="nav-item"><button>Home</button>
                     <li class="nav-item">Service</li>
                     <li class="nav-item">Contact</li>
