Banner section completed

--- a/index.html
+++ b/index.html
@@ -12,18 +12,50 @@
 </head>
 <body>
     <header>
+        <!-- Nav bar start -->
         <nav class="nav-bar">
             <h3 class="fitness">Fitness</h3>
-            <div class="nav-content">
+            <div class="nav-content">               
                 <ul class="shared-display">
                     <i class="fa-solid fa-bars"></i>
-                    <li class="nav-item"><button>Home</button>
+                    <li><button class="shared-button">Home</button>
                     <li class="nav-item">Service</li>
                     <li class="nav-item">Contact</li>
-                    <li class="nav-item">About</li>
+                    <li class="nav-item nav-about">About</li>
                 </ul>
             </div>
         </nav>
+        <!-- Nav bar end -->
+         <!-- Banner section start -->
+        <section>
+            <div class="banner-container shared-display">
+                <div class="banner-left">
+                    <h1>Get body in <span id="shape">shape</span> & stay healthy</h1>
+                    <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                    <button class="shared-button">Join Club Now!</button>
+                    <button id="download-btn" class="shared-button">Download App</button>
+                </div>
+                <div class="banner-right">
+                    <img src="./images/Images 2.png" alt="">
+                    <div id="free-workout">
+                        <h3 class="text-heading">500+</h3>
+                        <p class="text-description">Free Workout Videos</p>
+                    </div>
+                    <div class="banner-right-video shared-display">
+                        <div id="youtube">
+                            <div id="youtube-triangle">
+
+                            </div>
+                        </div>
+                        <div id="youtube-video">
+                            <h4 class="text-heading">350+</h4>
+                            <p class="text-description">Video tutorial</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Banner section end -->
     </header>
     <main>
 
