--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
                 <div class="banner-left">
                     <h1>Get body in <span id="shape">shape</span> & stay healthy</h1>
                     <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
-                    <button class="shared-button">Join Club Now!</button>
-                    <button id="download-btn" class="shared-button">Download App</button>
+                    <div class="banner-left-btns">
+                        <button class="shared-button">Join Club Now!</button>
+                        <button id="download-btn" class="shared-button">Download App</button>
+                    </div>
                 </div>
                 <div class="banner-right">
                     <img src="./images/Images 2.png" alt="">
@@ -41,7 +43,7 @@
                         <h3 class="text-heading">500+</h3>
                         <p class="text-description">Free Workout Videos</p>
                     </div>
-                    <div class="banner-right-video shared-display">
+                    <div class="banner-right-video">
                         <div id="youtube">
                             <div id="youtube-triangle">
 
