Change your habits section Responsive completed

--- a/index.html
+++ b/index.html
@@ -59,8 +59,41 @@
         </section>
         <!-- Banner section end -->
     </header>
-    <main>
-
+    <main class="main-container">
+        <!-- Change Your Habits section start -->
+        <section>
+            <div class="change-habits-container">
+                <div class="change-habits-heading">
+                    <h2 class="text-heading">Change Your Habits</h2>
+                    <p class="text-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                </div>
+                <div class="change-habits-items">
+                    <div class="change-habits-item">
+                        <img src="./images/habits-01.png" alt="">
+                        <h4 class="text-heading">Movement</h4>
+                        <p class="text-description">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="change-habits-item">
+                        <img src="./images/habits-02.png" alt="">
+                        <h4 class="text-heading">Time</h4>
+                        <p class="text-description">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="change-habits-item">
+                        <img src="./images/habits-03.png" alt="">
+                        <h4 class="text-heading">Practice</h4>
+                        <p class="text-description">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="change-habits-item">
+                        <img src="./images/habits-04.png" alt="">
+                        <h4 class="text-heading">Weight Loss</h4>
+                        <p class="text-description">We believe fitness should be accessible to everyone</p>
+                    </div>
+                </div>
+            </div>
+         </section>
+        <!-- Change Your Habits section end -->
+         <!-- Run extra section start -->
+         <!-- Run extra section end -->
     </main>
     <footer>
 
