Run extra section completed with Responsive

--- a/index.html
+++ b/index.html
@@ -93,6 +93,19 @@
          </section>
         <!-- Change Your Habits section end -->
          <!-- Run extra section start -->
+          <section>
+            <div class="run-extra-container shared-display">
+                <div class="run-extra-content">
+                    <h2 class="text-heading">Run an Extra 
+                        Mile Easily</h2>
+                    <p class="text-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                    <button class="shared-button">Join Now</button>
+                </div>
+                <div class="run-extra-img">
+                    <img src="./images/run.jpg" alt="">
+                </div>
+            </div>
+          </section>
          <!-- Run extra section end -->
     </main>
     <footer>
