--- a/index.html
+++ b/index.html
@@ -107,6 +107,68 @@
             </div>
           </section>
          <!-- Run extra section end -->
+         <!-- BMI calculator section start -->
+          <section>
+            <div class="bmi-calculator-heading">
+                <h2 class="text-heading">BMI calculator</h2>
+                <p class="text-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="bmi-calculator-main-part">
+                <div class="bmi-calculator-container shared-display">
+                    <div class="bmi-calculator-table">
+                        <h4 class="text-heading">BMI Calculator Chart</h4>
+                        <table>
+                            <tr>
+                                <th>BMI</th>
+                                <th>Weight Status</th>
+                            </tr>
+                            <tr>
+                                <td>Below 18.5</td>
+                                <td>Underweight</td>
+                            </tr>
+                            <tr>
+                                <td>18.5 - 24.9</td>
+                                <td>Healthy</td>
+                            </tr>
+                            <tr>
+                                <td>25.0 - 29.9</td>
+                                <td>Overweight</td>
+                            </tr>
+                            <tr>
+                                <td>30.0 - and Above</td>
+                                <td>Obese</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="calculate-bmi-container">
+                        <h4 class="text-heading">Calculate your BMI</h4>
+                        <p class="text-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+                        <div>
+                            <form class="bmi-calculator">
+                                <input class="height input" type="text" placeholder="Height/cm">
+                                <input class="weight input" type="text" placeholder="Weight/kg">
+                                <input class="age input" type="text" placeholder="Age">
+                                <select class="text input"  name="" id="text">
+                                    <option value="text">Sex</option>
+                                    <option value="text">Male</option>
+                                    <option value="text">Female</option>
+                                    <option value="text">Other</option>
+                                </select>
+                                <select class="activity-factor input" name="" id="activity-factor">
+                                    <option value="activity-factor">Select an activity factor</option>
+                                    <option value="activity-factor">Sedentary (Little to no exercise )</option>
+                                    <option value="activity-factor">Light exercise (1-3 days per week)</option>
+                                    <option value="activity-factor">Moderate exercise (3-5 days per week)</option>
+                                    <option value="activity-factor">Heavy exercise (6-7 days per week)</option>
+                                </select>
+                                <button class="shared-button">Calculate</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </section>
+         <!-- BMI calculator section end -->
     </main>
     <footer>
 
