--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                     <option value="activity-factor">Moderate exercise (3-5 days per week)</option>
                                     <option value="activity-factor">Heavy exercise (6-7 days per week)</option>
                                 </select>
-                                <button class="shared-button">Calculate</button>
+                                <button class="shared-button calculate">Calculate</button>
                             </form>
                         </div>
                     </div>
@@ -169,6 +169,61 @@
             </div>
           </section>
          <!-- BMI calculator section end -->
+         <!-- BENEFITS section start -->
+
+         <!-- BENEFITS section end -->
+         <!-- Meet Our Team section start -->
+          <section>
+            <div class="our-team-heading">
+                <h2 class="text-heading">Meet Our Team</h2>
+                <p class="text-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="our-team-members">
+                <div class="our-team-member">
+                    <img src="./images/trainer1.png" alt="">
+                    <div class="img-description">
+                        <h4>Jerome Bell</h4>
+                        <p class="text-description">Trainer</p>
+                    </div>
+                </div>
+                <div class="our-team-member">
+                    <img src="./images/trainer2.png" alt="">
+                    <div class="img-description margin-left">
+                        <h4>Cameron Will..</h4>
+                        <p class="text-description">Trainer</p>
+                    </div>
+                </div>
+                <div class="our-team-member">
+                    <img src="./images/trainer3.png" alt="">
+                    <div class="img-description">
+                        <h4>Darrell Steward</h4>
+                        <p class="text-description">Trainer</p>
+                    </div>
+                </div>
+                <div class="our-team-member">
+                    <img src="./images/trainer4.png" alt="">
+                    <div class="img-description">
+                        <h4>Dianne Russell</h4>
+                        <p class="text-description">Trainer</p>
+                    </div>
+                </div>
+                <div class="our-team-member">
+                    <img src="./images/trainer5.png" alt="">
+                    <div class="img-description">
+                        <h4>Cody Fisher</h4>
+                        <p class="text-description">Trainer</p>
+                    </div>
+                </div>
+                <div class="our-team-member">
+                    <img src="./images/trainer6.png" alt="">
+                    <div class="img-description">
+                        <h4>Theresa Webb</h4>
+                        <p class="text-description">Trainer</p>
+                    </div>
+                </div>
+            </div>
+          </section>
+         <!-- Meet Our Team section end -->
     </main>
     <footer>
 
