--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <p class="text-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
             </div>
             <div class="our-team-members">
-                <div class="our-team-member">
+                <div class="our-team-member hide">
                     <img src="./images/trainer1.png" alt="">
                     <div class="img-description">
                         <h4>Jerome Bell</h4>
@@ -188,7 +188,7 @@
                 </div>
                 <div class="our-team-member">
                     <img src="./images/trainer2.png" alt="">
-                    <div class="img-description margin-left">
+                    <div class="img-description">
                         <h4>Cameron Will..</h4>
                         <p class="text-description">Trainer</p>
                     </div>
@@ -200,7 +200,7 @@
                         <p class="text-description">Trainer</p>
                     </div>
                 </div>
-                <div class="our-team-member">
+                <div class="our-team-member hide">
                     <img src="./images/trainer4.png" alt="">
                     <div class="img-description">
                         <h4>Dianne Russell</h4>
