Benefits section added

--- a/index.html
+++ b/index.html
@@ -224,6 +224,45 @@
             </div>
           </section>
          <!-- Meet Our Team section end -->
+         <!-- Benefits section start -->
+          <section>
+            <h2 class="text-heading benefits">BENEFITS</h2>
+            <div id="benefits-container">
+                <div class="benefits-item">
+                    <div class="benefits-heading">
+                        <img src="./images/body.png" alt="">
+                        <h4>Body Recomp</h4>
+                    </div>
+                    <p class="text-description">Whether looking to build muscle or lose weight, Body recomposition refers to the process of simultaneously reducing body fat and building lean muscle mass. Its benefits include improved overall body composition, increased metabolism, enhanced strength and functionality, boosted confidence, and a healthier, more vibrant appearance. This approach promotes long-term sustainable results, focusing on achieving a balanced and toned physique while optimizing health and fitness.</p>
+                    <button class="shared-button">Read More</button>
+                </div>
+                <div class="benefits-item">
+                    <div class="benefits-heading">
+                        <img src="./images/mental.png" alt="">
+                        <h4>Mental Health</h4>
+                    </div>
+                    <p class="text-description">Advantage Fitness Training offers a multitude of mental health benefits, including reduced stress and anxiety, improved mood through the release of endorphins, enhanced self-esteem and body image, increased cognitive function, better sleep quality, heightened resilience to stressors, and a sense of accomplishment, all contributing to a more positive and balanced overall mental well-being.</p>
+                    <button class="shared-button">Read More</button>
+                </div>
+                <div class="benefits-item">
+                    <div class="benefits-heading">
+                        <img src="./images/strength.png" alt="">
+                        <h4>Increased Strength</h4>
+                    </div>
+                    <p class="text-description">Increased strength yields numerous advantages, such as improved functional abilities for daily tasks, enhanced bone density, reduced risk of injury, boosted metabolism, greater confidence in physical capabilities, increased muscle definition, and a higher quality of life as physical performance and endurance improve, fostering overall health and well-being.</p>
+                    <button class="shared-button">Read More</button>
+                </div>
+                <div class="benefits-item">
+                    <div class="benefits-heading">
+                        <img src="./images/nutritional.png" alt="">
+                        <h4>Nutritional Guidance</h4>
+                    </div>
+                    <p class="text-description">Nutritional guidance provides significant benefits, including better weight management, optimized energy levels, improved digestion, enhanced nutrient intake, reduced risk of chronic diseases, increased awareness of healthy eating habits, and personalized strategies to meet dietary goals, ultimately supporting long-term well-being and fostering a healthier, more balanced lifestyle.</p>
+                    <button class="shared-button">Read More</button>
+                </div>
+            </div>
+          </section>
+         <!-- Benefits section end -->
     </main>
     <footer>
 
