Footer section added

--- a/index.html
+++ b/index.html
@@ -169,9 +169,6 @@
             </div>
           </section>
          <!-- BMI calculator section end -->
-         <!-- BENEFITS section start -->
-
-         <!-- BENEFITS section end -->
          <!-- Meet Our Team section start -->
           <section>
             <div class="our-team-heading">
@@ -225,8 +222,8 @@
           </section>
          <!-- Meet Our Team section end -->
          <!-- Benefits section start -->
-          <section>
-            <h2 class="text-heading benefits">BENEFITS</h2>
+          <section class="benefits-container">
+            <h2 class="text-heading">BENEFITS</h2>
             <div id="benefits-container">
                 <div class="benefits-item">
                     <div class="benefits-heading">
@@ -265,7 +262,31 @@
          <!-- Benefits section end -->
     </main>
     <footer>
-
+        <section class="footer-main">
+            <div class="footer-container">
+                <div class="footer-item footer-heading">
+                    <h2 class="text-heading">Fitness</h2>
+                    <p class="text-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+                </div>
+                <div class="footer-item">
+                    <h4 >Get Started</h4>
+                    <p class="text-description">Service</p>
+                    <p class="text-description">Contact Us</p>
+                    <p class="text-description">Affiliate Program</p>
+                    <p class="text-description">About Us</p>
+                </div>
+                <div class="footer-item">
+                    <h4>Get Started</h4>
+                    <p class="text-description">Fitness</p>
+                    <p class="text-description">Platform</p>
+                    <p class="text-description">Workout Libary</p>
+                    <p class="text-description">App Design</p>
+                </div>
+            </div>
+            <hr>
+            <p class="text-description copyright">All right reserved @Fitness 2024</p>
+        </section>
+        
     </footer>
 </body>
 </html>
