Footer section Responsive completed

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <footer>
         <section class="footer-main">
             <div class="footer-container">
-                <div class="footer-item footer-heading">
+                <div id="footer-heading" class="footer-item">
                     <h2 class="text-heading">Fitness</h2>
                     <p class="text-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
                 </div>
@@ -284,7 +284,7 @@
                 </div>
             </div>
             <hr>
-            <p class="text-description copyright">All right reserved @Fitness 2024</p>
+            <p id="copyright" class="text-description">All right reserved @Fitness 2024</p>
         </section>
         
     </footer>
